Added Project comment field.

--- a/index.html
+++ b/index.html
@@ -23,14 +23,19 @@
           <label for="people">People</label>
           <input type="number" id="people" step="1" />
         </div>
+        <div class="form-control">
+          <label for="comment">Comment</label>
+          <textarea id="comment" rows="2"></textarea>
+        </div>
         <button type="submit">ADD PROJECT</button>
       </form>
     </template>
     <template id="single-project">
       <li draggable="true">
         <h2></h2>
-        <h3></h3>
         <p></p>
+        <h3></h3>
+        <div></div>
       </li>
     </template>
     <template id="project-list">
